minor fixes on cGAN configs

--- a/dsrnngan/test_forecast.ipynb
+++ b/dsrnngan/test_forecast.ipynb
@@ -5,13 +5,6 @@
    "execution_count": 1,
    "id": "f7b05453-3c6f-4f0e-9698-6806634dccf7",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-12T23:19:21.727427Z",
-     "iopub.status.busy": "2024-03-12T23:19:21.727137Z",
-     "iopub.status.idle": "2024-03-12T23:19:24.265955Z",
-     "shell.execute_reply": "2024-03-12T23:19:24.265428Z",
-     "shell.execute_reply.started": "2024-03-12T23:19:21.727411Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -19,12 +12,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-12 23:19:22.143432: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-03-12 23:19:22.143494: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-03-12 23:19:22.144646: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-03-12 23:19:22.151554: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-03-12 23:19:23.040409: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-04-19 11:36:16.562962: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-04-19 11:36:16.592821: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-04-19 11:36:16.681549: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-04-19 11:36:16.681575: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-04-19 11:36:16.690158: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-04-19 11:36:16.708672: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-04-19 11:36:16.709356: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-04-19 11:36:17.556440: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     },
     {
@@ -33,7 +29,7 @@
      "text": [
       "Loading forecast normalisations\n",
       "In load_fcst_norm\n",
-      "fcstnorm_path = /home/c/cooperf/data/cGAN/ICPAC/6h_IMERG_v6_Andrew/constants/FCSTNorm2018.pkl\n"
+      "fcstnorm_path = /home/jason/.docker-data/cgan/constants/FCSTNorm2018.pkl\n"
      ]
     }
    ],
@@ -69,15 +65,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "44bdb4d0-a785-4730-9092-3cfa38b82079",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-12T23:19:24.267022Z",
-     "iopub.status.busy": "2024-03-12T23:19:24.266631Z",
-     "iopub.status.idle": "2024-03-12T23:19:24.410018Z",
-     "shell.execute_reply": "2024-03-12T23:19:24.409465Z",
-     "shell.execute_reply.started": "2024-03-12T23:19:24.267003Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define the latitude and longitude arrays for later\n",
@@ -95,15 +83,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "870711e9-eed3-4db7-9824-7b9c599dfdd9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-12T23:19:24.410998Z",
-     "iopub.status.busy": "2024-03-12T23:19:24.410690Z",
-     "iopub.status.idle": "2024-03-12T23:19:24.414459Z",
-     "shell.execute_reply": "2024-03-12T23:19:24.414095Z",
-     "shell.execute_reply.started": "2024-03-12T23:19:24.410982Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Open and parse forecast.yaml\n",
@@ -120,24 +100,8 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "fda4e72b-3f3a-4e98-81f1-c466970fb9e8",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-12T23:19:24.415085Z",
-     "iopub.status.busy": "2024-03-12T23:19:24.414957Z",
-     "iopub.status.idle": "2024-03-12T23:19:27.511943Z",
-     "shell.execute_reply": "2024-03-12T23:19:27.511373Z",
-     "shell.execute_reply.started": "2024-03-12T23:19:24.415072Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-03-12 23:19:26.177594: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 38191 MB memory:  -> device: 0, name: NVIDIA A100-PCIE-40GB, pci bus id: 0000:21:00.0, compute capability: 8.0\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model_folder = fcst_params[\"MODEL\"][\"folder\"]\n",
     "checkpoint = fcst_params[\"MODEL\"][\"checkpoint\"]\n",
@@ -194,15 +158,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "fa944362-8d02-4ffd-b7c3-8fe5c4909c6d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-12T23:19:27.513079Z",
-     "iopub.status.busy": "2024-03-12T23:19:27.512711Z",
-     "iopub.status.idle": "2024-03-12T23:19:27.518295Z",
-     "shell.execute_reply": "2024-03-12T23:19:27.517905Z",
-     "shell.execute_reply.started": "2024-03-12T23:19:27.513062Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def create_output_file(nc_out_path):\n",
@@ -263,57 +219,47 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "f8eb5b27-3b85-49e9-b259-b784d85cdc25",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-12T23:19:27.519993Z",
-     "iopub.status.busy": "2024-03-12T23:19:27.519648Z",
-     "iopub.status.idle": "2024-03-12T23:19:27.536375Z",
-     "shell.execute_reply": "2024-03-12T23:19:27.535905Z",
-     "shell.execute_reply.started": "2024-03-12T23:19:27.519977Z"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-04-18\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Open input netCDF file to get the times\n",
     "nc_in_path = os.path.join(input_folder, input_file)\n",
     "nc_in = nc.Dataset(nc_in_path, mode=\"r\")\n",
     "start_times = [nc_in[\"time\"][0]]\n",
-    "valid_times = [nc_in[\"valid_time\"][0,:]]\n",
+    "valid_times = [nc_in[\"valid_time\"][:]]\n",
     "d = datetime(1900,1,1) + timedelta(hours=int(start_times[0]))\n",
     "print(f\"{d.year}-{d.month:02}-{d.day:02}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "2c0c7b11-d887-472e-beef-f7a4aabcc007",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-12T23:19:27.565139Z",
-     "iopub.status.busy": "2024-03-12T23:19:27.564897Z",
-     "iopub.status.idle": "2024-03-12T23:20:00.454568Z",
-     "shell.execute_reply": "2024-03-12T23:20:00.453943Z",
-     "shell.execute_reply.started": "2024-03-12T23:19:27.565126Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-12 23:19:29.456808: I external/local_tsl/tsl/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2024-03-12 23:19:29.890147: I external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:454] Loaded cuDNN version 8904\n",
-      "2024-03-12 23:19:30.641673: I external/local_tsl/tsl/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n"
+      "2024-04-19 11:46:48.173379: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:961] remapper failed: INVALID_ARGUMENT: Mutation::Apply error: fanout 'gen/leaky_re_lu_12/LeakyRelu' exist for missing node 'gen/add_4/add'.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50/50 [==============================] - 10s 134ms/step\n",
-      "50/50 [==============================] - 7s 140ms/step\n",
-      "50/50 [==============================] - 7s 141ms/step\n",
-      "50/50 [==============================] - 7s 137ms/step\n"
+      "10/10 [==============================] - 6s 625ms/step\n",
+      "10/10 [==============================] - 5s 538ms/step\n",
+      "10/10 [==============================] - 6s 556ms/step\n",
+      "10/10 [==============================] - 6s 554ms/step\n"
      ]
     }
    ],
@@ -327,7 +273,7 @@
     "\n",
     "# loop over time chunks. output forecasts may not start from hour 0, so\n",
     "# generate output and input valid time indices using enumerate(...)\n",
-    "for out_time_idx, in_time_idx in enumerate(range(start_hour//HOURS, end_hour//HOURS)):\n",
+    "for out_time_idx, in_time_idx in enumerate(range(start_hour//HOURS - 5, end_hour//HOURS - 5)):\n",
     "    # copy across valid_time from input file\n",
     "    netcdf_dict[\"valid_time_data\"][0, out_time_idx] = valid_times[0][in_time_idx]\n",
     "    field_arrays = []\n",
@@ -344,7 +290,6 @@
     "        \n",
     "        # Open input netCDF file\n",
     "        #input_file = f\"{field}.nc\"\n",
-    "        input_file = 'IFS_20180606_00Z.nc'\n",
     "        nc_in_path = os.path.join(input_folder, input_file)\n",
     "        nc_in = nc.Dataset(nc_in_path, mode=\"r\")\n",
     "        \n",
@@ -447,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
